--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -1,144 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
 
-    <link rel="apple-touch-icon" type="image/png" href="icon.png" />
-    <meta name="apple-mobile-web-app-title" content="AARYANX" />
+<head>
+  <meta charset="UTF-8" />
 
-    <link rel="shortcut icon" type="image/x-icon" href="icon.png" />
+  <link rel="apple-touch-icon" type="image/png" href="icon.png" />
 
-    <link
-      rel="mask-icon"
-      type=""
-      href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg"
-      color="#111"
-    />
+  <link rel="shortcut icon" type="image/x-icon" href="icon.png" />
 
-    <link rel="stylesheet" href="/css/calenderstyles.css">
+  <link rel="mask-icon" type=""
+    href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg"
+    color="#111" />
 
-    <title>Calendar and Clock</title>
+  <link rel="stylesheet" href="/css/calenderstyles.css">
 
-    
-    <script>
-      window.console = window.console || function (t) {};
-    </script>
+  <title>Calendar and Clock</title>
 
-    <script>
-      if (document.location.search.match(/type=embed/gi)) {
-        window.parent.postMessage("resize", "*");
+
+  <script>
+    window.console = window.console || function (t) { };
+  </script>
+
+  <script>
+    if (document.location.search.match(/type=embed/gi)) {
+      window.parent.postMessage("resize", "*");
+    }
+  </script>
+</head>
+
+<body translate="no">
+  <h4>TODAY</h4>
+  <div class="calendar">
+    <p id="month"></p>
+    <p id="day"></p>
+    <p id="num"></p>
+    <p id="year"></p>
+  </div>
+  <div class="time">
+    <h6>TIME NOW</h6>
+    <p id="h"></p>
+  </div>
+
+  <script
+    src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+
+  <script id="rendered-js">
+    const lang = navigator.language;
+    function setDate() {
+      let date = new Date();
+      // calendar
+      let month = date.getMonth();
+      let num = date.getDate();
+      let day = date.toLocaleString(lang, { weekday: "long" });
+      let monthName = date.toLocaleString(lang, { month: "long" });
+      let year = date.getFullYear();
+      // clock
+      let hour = date.getHours();
+      let minute = date.getMinutes();
+      let second = date.getSeconds();
+      let period = "AM";
+      if (hour >= 12) {
+        period = "PM";
       }
-    </script>
-  </head>
-
-  <body translate="no">
-    <h4>TODAY</h4>
-    <div class="calendar">
-      <p id="month"></p>
-      <p id="day"></p>
-      <p id="num"></p>
-      <p id="year"></p>
-    </div>
-    <div class="time">
-      <h6>TIME NOW</h6>
-      <p id="h"></p>
-    </div>
-    <footer>
-      <p>CREATED BY AARYANX</p>
-    </footer>
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
-
-    <script id="rendered-js">
-      const lang = navigator.language;
-      function setDate() {
-        let date = new Date();
-        // calendar
-        let month = date.getMonth();
-        let num = date.getDate();
-        let day = date.toLocaleString(lang, { weekday: "long" });
-        let monthName = date.toLocaleString(lang, { month: "long" });
-        let year = date.getFullYear();
-        // clock
-        let hour = date.getHours();
-        let minute = date.getMinutes();
-        let second = date.getSeconds();
-        let period = "AM";
-        if (hour >= 12) {
-          period = "PM";
-        }
-        if (hour > 12) {
-          hour = hour - 12;
-        }
-        if (minute < 10) {
-          minute = "0" + minute;
-        }
-        if (second < 10) {
-          second = "0" + second;
-        }
-
-        document.querySelector("#month").innerHTML = monthName;
-        document.querySelector("#day").innerHTML = day;
-        document.querySelector("#num").innerHTML = num;
-        document.querySelector("#year").innerHTML = year;
-        document.querySelector(
-          "#h"
-        ).innerHTML = `${hour} : ${minute} : ${second} ${period}`;
+      if (hour > 12) {
+        hour = hour - 12;
       }
-      setInterval(setDate, 1000);
-      setDate();
-      //# sourceURL=pen.js
-    </script>
+      if (minute < 10) {
+        minute = "0" + minute;
+      }
+      if (second < 10) {
+        second = "0" + second;
+      }
 
-    <script language="JavaScript">
-      //<!--
+      document.querySelector("#month").innerHTML = monthName;
+      document.querySelector("#day").innerHTML = day;
+      document.querySelector("#num").innerHTML = num;
+      document.querySelector("#year").innerHTML = year;
+      document.querySelector(
+        "#h"
+      ).innerHTML = `${hour} : ${minute} : ${second} ${period}`;
+    }
+    setInterval(setDate, 1000);
+    setDate();
 
-      //Disable right mouse click Script
-      //By Geek Site.in
+  </script>
 
-      var message =
-        "WEBPAGE PROTECTED! SELETION, RIGHT CLICK, CURSOR IS DISABLED";
+  <script language="JavaScript">
 
-      ///////////////////////////////////
-      function clickIE4() {
-        if (event.button == 2) {
+
+    var message =
+      "WEBPAGE PROTECTED! SELETION, RIGHT CLICK, CURSOR IS DISABLED";
+
+    ///////////////////////////////////
+    function clickIE4() {
+      if (event.button == 2) {
+        alert(message);
+        return false;
+      }
+    }
+
+    function clickNS4(e) {
+      if (document.layers || (document.getElementById && !document.all)) {
+        if (e.which == 2 || e.which == 3) {
           alert(message);
           return false;
         }
       }
+    }
 
-      function clickNS4(e) {
-        if (document.layers || (document.getElementById && !document.all)) {
-          if (e.which == 2 || e.which == 3) {
-            alert(message);
-            return false;
-          }
-        }
-      }
+    if (document.layers) {
+      document.captureEvents(Event.MOUSEDOWN);
+      document.onmousedown = clickNS4;
+    } else if (document.all && !document.getElementById) {
+      document.onmousedown = clickIE4;
+    }
 
-      if (document.layers) {
-        document.captureEvents(Event.MOUSEDOWN);
-        document.onmousedown = clickNS4;
-      } else if (document.all && !document.getElementById) {
-        document.onmousedown = clickIE4;
-      }
-
-      document.oncontextmenu = new Function("alert(message);return false");
+    document.oncontextmenu = new Function("alert(message);return false");
 
       // -->
-    </script>
-    <script>
-      document.onkeydown = function (e) {
-        if (e.ctrlKey && e.keyCode === 85) {
-          return false;
-        }
-      };
-    </script>
-    <script>
-      document.onkeydown = function (e) {
-        if (e.ctrlKey && e.keyCode === 85) {
-          return false;
-        }
-      };
-    </script>
-  </body>
+  </script>
+  <script>
+    document.onkeydown = function (e) {
+      if (e.ctrlKey && e.keyCode === 85) {
+        return false;
+      }
+    };
+  </script>
+  <script>
+    document.onkeydown = function (e) {
+      if (e.ctrlKey && e.keyCode === 85) {
+        return false;
+      }
+    };
+  </script>
+</body>
+
 </html>
