--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -49,15 +49,15 @@
     function setDate() {
       let date = new Date();
       // calendar
-      let month = date.getMonth();
-      let num = date.getDate();
+      let month = date.getMonth(); //0-11
+      let num = date.getDate(); // 1-31
       let day = date.toLocaleString(lang, { weekday: "long" });
       let monthName = date.toLocaleString(lang, { month: "long" });
       let year = date.getFullYear();
       // clock
-      let hour = date.getHours();
-      let minute = date.getMinutes();
-      let second = date.getSeconds();
+      let hour = date.getHours(); //0-23
+      let minute = date.getMinutes(); //0-59
+      let second = date.getSeconds(); //0-59
       let period = "AM";
       if (hour >= 12) {
         period = "PM";
