Calender Updated and About US added

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,20 @@
 <%- include("header") -%>
 
-<h1>Hello welcome!! This is Prouctivity website</h1>
-<p >we are here to make your routine productive <br></p>
+<head>
+    <title>About Us</title>
+</head>
 
+<h1 style="color: red;">Hello welcome!! This is Prouctivity website</h1>
+
+<p >we are here to make your routine productive <br></p>
+<p></p>
+
+<h1 style="color: brown;">Team Members</h1>
+<ul style="color:blue ; ">
+    <li>Salim Tadvi</li>
+    <li>Arya Singh</li>
+    <li>Sanika Chandode</li>
+    <li>Ninad Gawarle</li>
+    <li>Akshay Phalke</li>
+  </ul>
 <%- include("footer") -%>
