--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -1,36 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- head -->
   <head>
     <meta charset="UTF-8" />
-
-    <link rel="apple-touch-icon" type="image/png" href="icon.png" />
-    <meta name="apple-mobile-web-app-title" content="AARYANX" />
-
-    <link rel="shortcut icon" type="image/x-icon" href="icon.png" />
-
-    <link
-      rel="mask-icon"
-      type=""
-      href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg"
-      color="#111"
-    />
-
     <link rel="stylesheet" href="/css/calenderstyles.css">
 
     <title>Calendar and Clock</title>
-
-    
-    <script>
-      window.console = window.console || function (t) {};
-    </script>
-
-    <script>
-      if (document.location.search.match(/type=embed/gi)) {
-        window.parent.postMessage("resize", "*");
-      }
-    </script>
   </head>
 
+<!-- Body  -->
   <body translate="no">
     <h4>TODAY</h4>
     <div class="calendar">
@@ -44,10 +22,10 @@
       <p id="h"></p>
     </div>
     <footer>
-      <p>CREATED BY AARYANX</p>
+      <p>Copyright@2022</p>
     </footer>
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
-
+  
+<!-- Script -->
     <script id="rendered-js">
       const lang = navigator.language;
       function setDate() {
@@ -86,59 +64,8 @@
       }
       setInterval(setDate, 1000);
       setDate();
-      //# sourceURL=pen.js
+      
     </script>
 
-    <script language="JavaScript">
-      //<!--
-
-      //Disable right mouse click Script
-      //By Geek Site.in
-
-      var message =
-        "WEBPAGE PROTECTED! SELETION, RIGHT CLICK, CURSOR IS DISABLED";
-
-      ///////////////////////////////////
-      function clickIE4() {
-        if (event.button == 2) {
-          alert(message);
-          return false;
-        }
-      }
-
-      function clickNS4(e) {
-        if (document.layers || (document.getElementById && !document.all)) {
-          if (e.which == 2 || e.which == 3) {
-            alert(message);
-            return false;
-          }
-        }
-      }
-
-      if (document.layers) {
-        document.captureEvents(Event.MOUSEDOWN);
-        document.onmousedown = clickNS4;
-      } else if (document.all && !document.getElementById) {
-        document.onmousedown = clickIE4;
-      }
-
-      document.oncontextmenu = new Function("alert(message);return false");
-
-      // -->
-    </script>
-    <script>
-      document.onkeydown = function (e) {
-        if (e.ctrlKey && e.keyCode === 85) {
-          return false;
-        }
-      };
-    </script>
-    <script>
-      document.onkeydown = function (e) {
-        if (e.ctrlKey && e.keyCode === 85) {
-          return false;
-        }
-      };
-    </script>
-  </body>
+     </body>
 </html>
